--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
 
-        <!-- Section Intro/Description -->
+    <!-- Section Intro/Description -->
 
         <section>
             <div class="widthRestrained ">
@@ -28,7 +28,7 @@
                     carmamelized onions, tart Cranberries, and creamy Brie cheese. It will become your favourite holiday
                     starter!</p>
                 <img src="./assets/focaccia.png" alt="focaccia" class="imgMain">
-                <figcaption>Image: Sally Vegas</figcaption>
+                <figure></figure>                
             </div>            
         </section>
 
