--- a/index.html
+++ b/index.html
@@ -1,84 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
 
-<body>
-
+  <body>
     <!-- Header, Logo - Title-->
 
     <header>
-        <img src="./assets/logo.png" alt="logo" class="centeredImg">
-        <h3 class="logoH3">Part of <strong>A SIMPLY FABULOUS THANKSGIVING</strong></h3>
+      <img src="./assets/logo.png" alt="logo" class="centeredImg" />
+      <h3 class="logoH3">
+        Part of
+        <strong>A SIMPLY FABULOUS THANKSGIVING</strong>
+      </h3>
     </header>
 
     <main>
+      <!-- Section Intro/Description -->
 
-    <!-- Section Intro/Description -->
+      <section>
+        <div class="widthRestrained">
+          <h1 class="centeredText textColor1">
+            Focaccia with Caramelized Onions, Cranberries, and Brie
+          </h1>
+          <p class="textColor1">
+            Wow your taste buds with this festive focaccia appetizer topped with
+            sweet carmamelized onions, tart Cranberries, and creamy Brie cheese.
+            It will become your favourite holiday starter!
+          </p>
+          <img src="./assets/focaccia.png" alt="focaccia" class="imgMain" />
+          <figcaption>Image: Sally Vegas</figcaption>
+        </div>
+      </section>
 
-        <section>
-            <div class="widthRestrained ">
-                <h1 class="centeredText textColor1">Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
-                <p class="textColor1">Wow your taste buds with this festive focaccia appetizer topped with sweet
-                    carmamelized onions, tart Cranberries, and creamy Brie cheese. It will become your favourite holiday
-                    starter!</p>
-                <img src="./assets/focaccia.png" alt="focaccia" class="imgMain">
-                <figure></figure>                
-            </div>            
-        </section>
+      <!-- Section Intro/Description -->
 
-        <!-- Section Intro/Description -->
+      <section class="introSection">
+        <div class="featuredDiv">
+          <h4 class="textColor2">FEATURED IN:</h4>
+          <a href="javascript:void(0)" class="featuredLink"
+            >Fresh Cranberries Recipies That Go Beyond Sauce</a
+          >
+        </div>
+      </section>
 
-        <section class="introSection">
-            <div class="featuredDiv">
-                    <h4 class="textColor2">FEATURED IN: </h4>
-                    <a href="javascript:void(0)" class="featuredLink">Fresh Cranberries Recipies That Go Beyond Sauce</a>
-            </div>
-        </section>
+      <!-- First article, the ingredients -->
 
-        <!-- First article, the ingredients -->
+      <article class="widthRestrained">
+        <h2 class="articleTitle textColor1">Ingredients</h2>
+        <p class="articleSubTitle textColor1">For the Focaccia:</p>
+        <ul class="textColor1">
+          <li>4 cups(500g) all-purpose flour</li>
+          <li>1 1/2 teaspoons instant yeast</li>
+          <li>1 1/2 teaspoons salt</li>
+          <li>1 3/4 cups(350g) lukewarm water</li>
+          <li>1/4 cup of extra virgin oil, plus more for the pan</li>
+        </ul>
+        <p class="articleSubTitle textColor1">For the Topping:</p>
+        <ul class="textColor1">
+          <li>3 medium yellow onions</li>
+          <li>1 tablespoon balsamic vinegar</li>
+          <li>1-2 tablespoons olive oil, for brushing on top</li>
+          <li>
+            10 ounces brie, cut into cubes(scrape rind off with a pairing knife
+            if desired, though it's not necessary)
+          </li>
+          <li>1/2 cups of fresh or frozen Cranberries</li>
+        </ul>
+      </article>
 
-        <article class="widthRestrained">
-            <h2 class="articleTitle textColor1">Ingredients</h2>
-            <p class="articleSubTitle textColor1">For the Focaccia:</p>
-            <ul class="textColor1">
-                <li>4 cups(500g) all-purpose flour</li>
-                <li>1 1/2 teaspoons instant yeast</li>
-                <li>1 1/2 teaspoons salt</li>
-                <li>1 3/4 cups(350g) lukewarm water</li>
-                <li>1/4 cup of extra virgin oil, plus more for the pan</li>
-                
-            </ul>
-            <p class="articleSubTitle textColor1">For the Topping:</p>
-            <ul class="textColor1">
-                <li>3 medium yellow onions</li>
-                <li>1 tablespoon balsamic vinegar</li>
-                <li>1-2 tablespoons olive oil, for brushing on top</li>
-                <li>10 ounces brie, cut into cubes(scrape rind off with a pairing knife if desired, though it's not necessary)</li>
-                <li>1/2 cups of fresh or frozen Cranberries</li>
-            </ul>
-        </article>
+      <!-- Second article, the method -->
 
-        <!-- Second article, the method -->
-
-        <article class="widthRestrained">
-            <h2 class="articleTitle textColor1">Method</h2>
-            <ol>
-                <li class="articleSubTitle textColor1">Make the Focaccia Dough</li>
-                <br>
-                <dl class="textColor1">In a medium sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the
-                    dough ingredients untill the flour is fully absorbed. You don't need to actually knead the dough,
-                    though I sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of
-                    the flour...</dl>
-            </ol>
-            <p class="textColor1">Read more on <a href="javascript:void(0)">Simply Recipies</a></p>
-        </article>
+      <article class="widthRestrained">
+        <h2 class="articleTitle textColor1">Method</h2>
+        <ol>
+          <li class="articleSubTitle textColor1">Make the Focaccia Dough</li>
+          <br />
+          <dl class="textColor1">
+            In a medium sized mixing bowl, or in a stand mixer with a paddle
+            attachment, mix together all the dough ingredients untill the flour
+            is fully absorbed. You don't need to actually knead the dough,
+            though I sometimes knead it a few times in the bowl when mixing by
+            hand to incorporate the last of the flour...
+          </dl>
+        </ol>
+        <p class="textColor1">
+          Read more on
+          <a href="javascript:void(0)">Simply Recipies</a>
+        </p>
+      </article>
     </main>
-</body>
-
+  </body>
 </html>
